--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>테스트페이지</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<script type="text/javascript">
 		// <![CDATA[
 		var colour = "random"; // in addition to "random" can be set to any valid colour eg "#f0f" or "red"
@@ -221,6 +221,6 @@
 			</div>
 		</div>
 	</div>
-<script type="text/javascript" src="/src/index.js"></script>
+<script type="text/javascript" src="./src/index.js"></script>
 </body>
 </html>
