--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -206,9 +207,16 @@
 	// ]]>
 	</script>
 </head>
+
 <body>
 	<div id="body">
 		<div id="header">
+			<div id="site_bgm_box" style="display: none;">
+				<iframe src="./src/bgm.html?action=play" name="bgm_frame" id="bgm_frame" border="0" frameborder="0"
+					marginheight="0" marginwidth="0" topmargin="0" scrolling="no" allowTransparency="true"
+					allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+
 			<div id="speaker" class="" onclick="toggleBgm()">
 			</div>
 			<div id="submit" onclick="submitButton()">
@@ -221,6 +229,7 @@
 			</div>
 		</div>
 	</div>
-<script type="text/javascript" src="./src/index.js"></script>
+	<script type="text/javascript" src="./src/index.js"></script>
 </body>
+
 </html>
