--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -217,7 +217,7 @@
 					allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 
-			<div id="speaker" class="" onclick="toggleBgm()">
+			<div id="speaker" class="soundOff" onclick="toggleBgm()">
 			</div>
 			<div id="submit" onclick="submitButton()">
 				완성 버튼
