--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -211,13 +211,13 @@
 <body>
 	<div id="body">
 		<div id="header">
-			<div id="site_bgm_box" style="display: none;">
+			<div id="site_bgm_box" style="width: 0; height: 0;">
 				<iframe src="./src/bgm.html?action=play" name="bgm_frame" id="bgm_frame" border="0" frameborder="0"
 					marginheight="0" marginwidth="0" topmargin="0" scrolling="no" allowTransparency="true"
 					allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 
-			<div id="speaker" class="soundOff" onclick="toggleBgm()">
+			<div id="speaker" class="" onclick="toggleBgm()">
 			</div>
 			<div id="submit" onclick="submitButton()">
 				완성 버튼
