이미지 경로 수정

--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -230,6 +230,9 @@
     </head>
 
     <body>
+        <div id="notice">
+            <div id="exit" onclick="exitNotice()"></div>
+        </div>
         <div id="header">
             <div id="site_bgm_box" class="disable">
                 <iframe
