--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta content="yes" name="apple-mobile-web-app-capable" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=0;"
+        />
         <title>테스트페이지</title>
         <link rel="stylesheet" href="./css/style.css" />
         <script type="text/javascript">
