--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -5,7 +5,7 @@
         <meta content="yes" name="apple-mobile-web-app-capable" />
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1.0, user-scalable=0.9;"
+            content="width=device-width, initial-scale=1.0, user-scalable=0;"
         />
         <title>테스트페이지</title>
         <link rel="stylesheet" href="./css/style.css" />
@@ -234,54 +234,55 @@
     </head>
 
     <body>
-        <div id="notice">
-            <div id="exit" onclick="exitNotice()"></div>
-        </div>
-        <div id="header">
-            <div id="site_bgm_box" class="disable">
-                <iframe
-                    src="./src/bgm.html"
-                    name="bgm_frame"
-                    id="bgm_frame"
-                    border="0"
-                    frameborder="0"
-                    marginheight="0"
-                    marginwidth="0"
-                    topmargin="0"
-                    scrolling="no"
-                    allowTransparency="true"
-                    allow="autoplay; encrypted-media"
-                    allowfullscreen
-                ></iframe>
+        <div class="area">
+            <div id="notice">
+                <div id="exit" onclick="exitNotice()"></div>
             </div>
-            <div id="speaker" class="" onclick="toggleBgm()"></div>
-            <div id="submit">
-                <img src="./src/img/submit.png" onclick="submitBtn()" />
+            <div id="header">
+                <div id="site_bgm_box" class="disable">
+                    <iframe
+                        src="./src/bgm.html"
+                        name="bgm_frame"
+                        id="bgm_frame"
+                        border="0"
+                        frameborder="0"
+                        marginheight="0"
+                        marginwidth="0"
+                        topmargin="0"
+                        scrolling="no"
+                        allowTransparency="true"
+                        allow="autoplay; encrypted-media"
+                        allowfullscreen
+                    ></iframe>
+                </div>
+                <div id="speaker" class="" onclick="toggleBgm()"></div>
+                <div id="submit">
+                    <img src="./src/img/submit.png" onclick="submitBtn()" />
+                </div>
             </div>
-        </div>
-        <div id="menu">
-            <div id="selectArea" class="disable">
-                <div id="colorPicker">색상 선택</div>
-                <div id="flowerPicker">꽃 선택</div>
+            <div id="menu">
+                <div id="selectArea" class="disable">
+                    <div id="colorPicker">색상 선택</div>
+                    <div id="flowerPicker">꽃 선택</div>
+                </div>
+                <div id="menuBtn" onclick="toggleMenu()">
+                    <div id="popBtn" class="pointer">
+                        <img class="pointer" src="./src/img/flower.png" />
+                    </div>
+                </div>
             </div>
-            <div id="menuBtn" onclick="toggleMenu()">
-                <div id="popBtn" class="pointer">
-                    <img class="pointer" src="./src/img/flower.png" />
+            <div id="body">
+                <div id="main">
+                    <div id="basicFrame"></div>
+                    <div id="customArea">화관자리</div>
+                </div>
+                <div id="footer">
+                    <div id="reset">
+                        <img src="./src/img/reset.png" onclick="resetBtn()" />
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="body">
-            <div id="main">
-                <div id="basicFrame"></div>
-                <div id="customArea">화관자리</div>
-            </div>
-            <div id="footer">
-                <div id="reset">
-                    <img src="./src/img/reset.png" onclick="resetBtn()" />
-                </div>
-            </div>
-        </div>
-
         <script type="text/javascript" src="./src/index.js"></script>
     </body>
 </html>
