메뉴 함수 추가

--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -264,44 +264,102 @@
                 <div id="selectArea" class="">
                     <div id="colorPicker">
                         <ul>
-                            <li onclick=""><img src="./src/img/base.png" /></li>
-                            <li onclick="">
+                            <li onclick="selectMenu('base')">
+                                <img src="./src/img/base.png" />
+                            </li>
+                            <li onclick="selectMenu('ribbon')">
                                 <img src="./src/img/ribbon.png" />
                             </li>
-                            <li onclick=""><img src="./src/img/leaf.png" /></li>
-                            <li onclick="">
+                            <li onclick="selectMenu('leaf')">
+                                <img src="./src/img/leaf.png" />
+                            </li>
+                            <li onclick="selectMenu('black')">
                                 <img src="./src/img/black.png" />
                             </li>
-                            <li onclick="">
+                            <li onclick="selectMenu('white')">
                                 <img src="./src/img/white.png" />
                             </li>
-                            <li onclick=""><img src="./src/img/red.png" /></li>
-                            <li onclick=""><img src="./src/img/pink.png" /></li>
-                            <li onclick="">
+                            <li onclick="selectMenu('red')">
+                                <img src="./src/img/red.png" />
+                            </li>
+                            <li onclick="selectMenu('pink')">
+                                <img src="./src/img/pink.png" />
+                            </li>
+                            <li onclick="selectMenu('yellow')">
                                 <img src="./src/img/yellow.png" />
                             </li>
-                            <li onclick="">
+                            <li onclick="selectMenu('green')">
                                 <img src="./src/img/green.png" />
                             </li>
-                            <li onclick=""><img src="./src/img/blue.png" /></li>
-                            <li onclick="">
+                            <li onclick="selectMenu('blue')">
+                                <img src="./src/img/blue.png" />
+                            </li>
+                            <li onclick="selectMenu('violet')">
                                 <img src="./src/img/violet.png" />
                             </li>
                         </ul>
                     </div>
                     <div id="flowerPicker">
-                        <ul id="base" class="">
-                            <li>베이스</li>
-                            <ul>
-                                <li>덩쿨</li>
-                                <li>가지</li>
-                                <li>가시</li>
-                            </ul>
-                        </ul>
                         <ul id="base" class="disable">
                             <li>덩쿨</li>
                             <li>가지</li>
                             <li>가시</li>
+                        </ul>
+                        <ul id="ribbon" class="disable">
+                            <li>검정</li>
+                            <li>하양</li>
+                            <li>빨강</li>
+                            <li>분홍</li>
+                            <li>노랑</li>
+                            <li>초록</li>
+                            <li>파랑</li>
+                            <li>남색</li>
+                            <li>보라</li>
+                        </ul>
+                        <ul id="leaf" class="disable">
+                            <li>얇은 잎</li>
+                            <li>작은 잎</li>
+                            <li>넓은 잎</li>
+                        </ul>
+                        <ul id="black" class="disable">
+                            <li>검정1</li>
+                            <li>검정2</li>
+                            <li>검정3</li>
+                        </ul>
+                        <ul id="white" class="disable">
+                            <li>하양1</li>
+                            <li>하양2</li>
+                            <li>하양3</li>
+                        </ul>
+                        <ul id="red" class="disable">
+                            <li>빨강1</li>
+                            <li>빨강2</li>
+                            <li>빨강3</li>
+                        </ul>
+                        <ul id="pink" class="disable">
+                            <li>분홍1</li>
+                            <li>분홍2</li>
+                            <li>분홍3</li>
+                        </ul>
+                        <ul id="yellow" class="disable">
+                            <li>노랑1</li>
+                            <li>노랑2</li>
+                            <li>노랑3</li>
+                        </ul>
+                        <ul id="green" class="disable">
+                            <li>초록1</li>
+                            <li>초록2</li>
+                            <li>초록3</li>
+                        </ul>
+                        <ul id="blue" class="disable">
+                            <li>파랑1</li>
+                            <li>파랑2</li>
+                            <li>파랑3</li>
+                        </ul>
+                        <ul id="violet" class="disable">
+                            <li>보라1</li>
+                            <li>보라2</li>
+                            <li>보라3</li>
                         </ul>
                     </div>
                 </div>
