기본값 변경

--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -261,7 +261,7 @@
                 </div>
             </div>
             <div id="menu">
-                <div id="selectArea" class="">
+                <div id="selectArea" class="disable">
                     <div id="colorPicker">
                         <ul>
                             <li onclick="selectMenu('base')">
