--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -8,6 +8,7 @@
             content="width=device-width, initial-scale=1.0, user-scalable=0;"
         />
         <title>테스트페이지</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="./css/style.css" />
         <script type="text/javascript">
             // <![CDATA[
@@ -263,159 +264,159 @@
                     />
                 </div>
             </div>
-            <div id="menu">
-                <div id="selectArea" class="">
-                    <div id="colorPicker">
-                        <ul>
-                            <li onclick="selectMenu('base')">
-                                <img src="./src/img/button/base.png" />
-                            </li>
-                            <li onclick="selectMenu('ribbon')">
-                                <img src="./src/img/button/ribbon.png" />
-                            </li>
-                            <li onclick="selectMenu('leaf')">
-                                <img src="./src/img/button/leaf.png" />
-                            </li>
-                            <li onclick="selectMenu('black')">
-                                <img src="./src/img/button/black.png" />
-                            </li>
-                            <li onclick="selectMenu('white')">
-                                <img src="./src/img/button/white.png" />
-                            </li>
-                            <li onclick="selectMenu('red')">
-                                <img src="./src/img/button/red.png" />
-                            </li>
-                            <li onclick="selectMenu('pink')">
-                                <img src="./src/img/button/pink.png" />
-                            </li>
-                            <li onclick="selectMenu('orange')">
-                                <img src="./src/img/button/orange.png" />
-                            </li>
-                            <li onclick="selectMenu('yellow')">
-                                <img src="./src/img/button/yellow.png" />
-                            </li>
-                            <li onclick="selectMenu('green')">
-                                <img src="./src/img/button/green.png" />
-                            </li>
-                            <li onclick="selectMenu('blue')">
-                                <img src="./src/img/button/blue.png" />
-                            </li>
-                            <li onclick="selectMenu('violet')">
-                                <img src="./src/img/button/violet.png" />
-                            </li>
-                        </ul>
+
+            <div id="body">
+                <div id="menu">
+                    <div id="selectArea" class="">
+                        <div id="colorPicker">
+                            <ul>
+                                <li onclick="selectMenu('base')">
+                                    <img src="./src/img/button/base.png" />
+                                </li>
+                                <li onclick="selectMenu('ribbon')">
+                                    <img src="./src/img/button/ribbon.png" />
+                                </li>
+                                <li onclick="selectMenu('leaf')">
+                                    <img src="./src/img/button/leaf.png" />
+                                </li>
+                                <li onclick="selectMenu('black')">
+                                    <img src="./src/img/button/black.png" />
+                                </li>
+                                <li onclick="selectMenu('white')">
+                                    <img src="./src/img/button/white.png" />
+                                </li>
+                                <li onclick="selectMenu('red')">
+                                    <img src="./src/img/button/red.png" />
+                                </li>
+                                <li onclick="selectMenu('pink')">
+                                    <img src="./src/img/button/pink.png" />
+                                </li>
+                                <li onclick="selectMenu('orange')">
+                                    <img src="./src/img/button/orange.png" />
+                                </li>
+                                <li onclick="selectMenu('yellow')">
+                                    <img src="./src/img/button/yellow.png" />
+                                </li>
+                                <li onclick="selectMenu('green')">
+                                    <img src="./src/img/button/green.png" />
+                                </li>
+                                <li onclick="selectMenu('blue')">
+                                    <img src="./src/img/button/blue.png" />
+                                </li>
+                                <li onclick="selectMenu('violet')">
+                                    <img src="./src/img/button/violet.png" />
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="flowerPicker">
+                            <ul id="base" class="disable">
+                                <li>덩쿨</li>
+                                <li>가지</li>
+                                <li>가시</li>
+                            </ul>
+                            <ul id="ribbon" class="disable">
+                                <li>검정</li>
+                                <li>하양</li>
+                                <li>빨강</li>
+                                <li>분홍</li>
+                                <li>노랑</li>
+                                <li>초록</li>
+                                <li>파랑</li>
+                                <li>남색</li>
+                                <li>보라</li>
+                            </ul>
+                            <ul id="leaf" class="disable">
+                                <li>노란 단풍</li>
+                                <li>빨간 단풍</li>
+                                <li>얇은 잎</li>
+                                <li>작은 잎</li>
+                                <li>넓은 잎</li>
+                            </ul>
+                            <ul id="black" class="disable">
+                                <li onclick="getFlowerObj('11_1')">
+                                    <img src="./src/img/flower/11_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('11_2')">
+                                    <img src="./src/img/flower/11_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="white" class="disable">
+                                <li onclick="getFlowerObj('21_1')">
+                                    <img src="./src/img/flower/21_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('21_2')">
+                                    <img src="./src/img/flower/21_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="red" class="disable">
+                                <li onclick="getFlowerObj('31_1')">
+                                    <img src="./src/img/flower/31_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('31_2')">
+                                    <img src="./src/img/flower/31_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="pink" class="disable">
+                                <li onclick="getFlowerObj('41_1')">
+                                    <img src="./src/img/flower/41_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('41_2')">
+                                    <img src="./src/img/flower/41_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="orange" class="disable">
+                                <li onclick="getFlowerObj('51_1')">
+                                    <img src="./src/img/flower/51_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('51_2')">
+                                    <img src="./src/img/flower/51_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="yellow" class="disable">
+                                <li onclick="getFlowerObj('61_1')">
+                                    <img src="./src/img/flower/61_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('61_2')">
+                                    <img src="./src/img/flower/61_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="green" class="disable">
+                                <li onclick="getFlowerObj('71_1')">
+                                    <img src="./src/img/flower/71_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('71_2')">
+                                    <img src="./src/img/flower/71_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="blue" class="disable">
+                                <li onclick="getFlowerObj('81_1')">
+                                    <img src="./src/img/flower/81_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('81_2')">
+                                    <img src="./src/img/flower/81_2.png" />
+                                </li>
+                            </ul>
+                            <ul id="violet" class="disable">
+                                <li onclick="getFlowerObj('91_1')">
+                                    <img src="./src/img/flower/91_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('91_2')">
+                                    <img src="./src/img/flower/91_2.png" />
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div id="flowerPicker">
-                        <ul id="base" class="disable">
-                            <li>덩쿨</li>
-                            <li>가지</li>
-                            <li>가시</li>
-                        </ul>
-                        <ul id="ribbon" class="disable">
-                            <li>검정</li>
-                            <li>하양</li>
-                            <li>빨강</li>
-                            <li>분홍</li>
-                            <li>노랑</li>
-                            <li>초록</li>
-                            <li>파랑</li>
-                            <li>남색</li>
-                            <li>보라</li>
-                        </ul>
-                        <ul id="leaf" class="disable">
-                            <li>노란 단풍</li>
-                            <li>빨간 단풍</li>
-                            <li>얇은 잎</li>
-                            <li>작은 잎</li>
-                            <li>넓은 잎</li>
-                        </ul>
-                        <ul id="black" class="disable">
-                            <li onclick="getObj('11_1')">
-                                <img src="./src/img/flower/11_1.png" />
-                            </li>
-                            <li onclick="getObj('11_2')">
-                                <img src="./src/img/flower/11_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="white" class="disable">
-                            <li onclick="getObj('21_1')">
-                                <img src="./src/img/flower/21_1.png" />
-                            </li>
-                            <li onclick="getObj('21_2')">
-                                <img src="./src/img/flower/21_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="red" class="disable">
-                            <li onclick="getObj('31_1')">
-                                <img src="./src/img/flower/31_1.png" />
-                            </li>
-                            <li onclick="getObj('31_2')">
-                                <img src="./src/img/flower/31_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="pink" class="disable">
-                            <li onclick="getObj('41_1')">
-                                <img src="./src/img/flower/41_1.png" />
-                            </li>
-                            <li onclick="getObj('41_2')">
-                                <img src="./src/img/flower/41_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="orange" class="disable">
-                            <li onclick="getObj('51_1')">
-                                <img src="./src/img/flower/51_1.png" />
-                            </li>
-                            <li onclick="getObj('51_2')">
-                                <img src="./src/img/flower/51_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="yellow" class="disable">
-                            <li onclick="getObj('61_1')">
-                                <img src="./src/img/flower/61_1.png" />
-                            </li>
-                            <li onclick="getObj('61_2')">
-                                <img src="./src/img/flower/61_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="green" class="disable">
-                            <li onclick="getObj('71_1')">
-                                <img src="./src/img/flower/71_1.png" />
-                            </li>
-                            <li onclick="getObj('71_2')">
-                                <img src="./src/img/flower/71_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="blue" class="disable">
-                            <li onclick="getObj('81_1')">
-                                <img src="./src/img/flower/81_1.png" />
-                            </li>
-                            <li onclick="getObj('81_2')">
-                                <img src="./src/img/flower/81_2.png" />
-                            </li>
-                        </ul>
-                        <ul id="violet" class="disable">
-                            <li onclick="getObj('91_1')">
-                                <img src="./src/img/flower/91_1.png" />
-                            </li>
-                            <li onclick="getObj('91_2')">
-                                <img src="./src/img/flower/91_2.png" />
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div id="menuBtn" onclick="toggleMenu()">
-                    <div id="popBtn" class="pointer">
+                    <div id="popBtn" class="pointer" onclick="toggleMenu()">
                         <img
                             class="pointer"
                             src="./src/img/button/flower.png"
                         />
                     </div>
                 </div>
-            </div>
-            <div id="body">
                 <div id="main">
+                    <div id="AreaBorder"></div>
                     <div id="basicFrame"></div>
-                    <div id="customArea">화관자리</div>
+                    <div id="customArea"></div>
                 </div>
                 <div id="footer">
                     <div id="reset">
