--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -8,7 +8,17 @@
             content="width=device-width, initial-scale=1.0, user-scalable=0;"
         />
         <title>테스트페이지</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link
+            rel="stylesheet"
+            href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css"
+        />
+        <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
+        <script
+            type="text/javascript"
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"
+        ></script>
+        <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
         <link rel="stylesheet" href="./css/style.css" />
         <script type="text/javascript">
             // <![CDATA[
@@ -232,6 +242,7 @@
             }
             // ]]>
         </script>
+        <script></script>
     </head>
 
     <body>
