--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -278,7 +278,7 @@
 
             <div id="body">
                 <div id="menu">
-                    <div id="selectArea" class="">
+                    <div id="selectArea" class="disable">
                         <div id="colorPicker">
                             <ul>
                                 <li onclick="selectMenu('base')">
@@ -425,7 +425,6 @@
                     </div>
                 </div>
                 <div id="main">
-                    <div id="AreaBorder"></div>
                     <div id="basicFrame"></div>
                     <div id="customArea"></div>
                 </div>
@@ -440,5 +439,6 @@
             </div>
         </div>
         <script type="text/javascript" src="./src/index.js"></script>
+        <script type="text/javascript" src="./src/FileSaver.js"></script>
     </body>
 </html>
