--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -10,7 +10,7 @@
         <title>테스트페이지</title>
         <link
             rel="stylesheet"
-            href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css"
+            href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css"
         />
         <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
         <script
@@ -425,8 +425,11 @@
                     </div>
                 </div>
                 <div id="main">
-                    <div id="basicFrame"></div>
-                    <div id="customArea"></div>
+                    <div id="areaBorder"></div>
+                    <div id="printSection">
+                        <div id="basicFrame"></div>
+                        <div id="customArea"></div>
+                    </div>
                 </div>
                 <div id="footer">
                     <div id="reset">
