메뉴 오류 수정

--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -334,32 +334,7 @@
                                     <img src="./src/img/base/base_thorn.png" />
                                 </li>
                             </ul>
-                            <ul id="ribbon" class="disable">
-                                <li onclick="getFlowerObj('11', 'ribbon')">
-                                    <img src="./src/img/ribbon/11.png" />
-                                </li>
-                                <li onclick="getFlowerObj('12', 'ribbon')">
-                                    <img src="./src/img/ribbon/12.png" />
-                                </li>
-                                <li onclick="getFlowerObj('13', 'ribbon')">
-                                    <img src="./src/img/ribbon/13.png" />
-                                </li>
-                                <li onclick="getFlowerObj('14', 'ribbon')">
-                                    <img src="./src/img/ribbon/14.png" />
-                                </li>
-                                <li onclick="getFlowerObj('15', 'ribbon')">
-                                    <img src="./src/img/ribbon/15.png" />
-                                </li>
-                                <li onclick="getFlowerObj('15', 'ribbon')">
-                                    <img src="./src/img/ribbon/15.png" />
-                                </li>
-                                <li onclick="getFlowerObj('16', 'ribbon')">
-                                    <img src="./src/img/ribbon/16.png" />
-                                </li>
-                                <li onclick="getFlowerObj('17', 'ribbon')">
-                                    <img src="./src/img/ribbon/17.png" />
-                                </li>
-                            </ul>
+                            <ul id="ribbon" class="disable"></ul>
                             <ul id="leaf" class="disable">
                                 <li>노란 단풍</li>
                                 <li>빨간 단풍</li>
