--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -12,6 +12,7 @@
             rel="stylesheet"
             href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css"
         />
+        <script type="text/javascript" src="./src/html2canvas.min.js"></script>
         <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
         <script
             type="text/javascript"
