--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -374,6 +374,9 @@
                                 <li onclick="getFlowerObj('41_2', 'flower')">
                                     <img src="./src/img/button/41_2.png" />
                                 </li>
+                                <li onclick="getFlowerObj('42_1', 'flower')">
+                                    <img src="./src/img/button/42_1.png" />
+                                </li>
                             </ul>
                             <ul id="orange" class="disable">
                                 <li onclick="getFlowerObj('51_1', 'flower')">
@@ -389,6 +392,12 @@
                                 </li>
                                 <li onclick="getFlowerObj('61_2', 'flower')">
                                     <img src="./src/img/button/61_2.png" />
+                                </li>
+                                <li onclick="getFlowerObj('62_1', 'flower')">
+                                    <img src="./src/img/button/62_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('63_1', 'flower')">
+                                    <img src="./src/img/button/63_1.png" />
                                 </li>
                             </ul>
                             <ul id="green" class="disable">
@@ -413,6 +422,21 @@
                                 </li>
                                 <li onclick="getFlowerObj('91_2', 'flower')">
                                     <img src="./src/img/button/91_2.png" />
+                                </li>
+                                <li onclick="getFlowerObj('92_1', 'flower')">
+                                    <img src="./src/img/button/92_1.png" />
+                                </li>
+                                <li onclick="getFlowerObj('92_2', 'flower')">
+                                    <img src="./src/img/button/92_2.png" />
+                                </li>
+                                <li onclick="getFlowerObj('92_3', 'flower')">
+                                    <img src="./src/img/button/92_3.png" />
+                                </li>
+                                <li onclick="getFlowerObj('92_4', 'flower')">
+                                    <img src="./src/img/button/92_4.png" />
+                                </li>
+                                <li onclick="getFlowerObj('93_1', 'flower')">
+                                    <img src="./src/img/button/93_1.png" />
                                 </li>
                             </ul>
                         </div>
