--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -7,7 +7,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, user-scalable=0;"
         />
-        <title>테스트페이지</title>
+        <title>원데이 클래스~꽃공예~</title>
         <link
             rel="stylesheet"
             href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css"
