--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -291,7 +291,7 @@
             </div>
         <div class="area">
             <div id="header">
-                <div id="site_bgm_box" class="disable">
+                <!-- <div id="site_bgm_box" class="disable">
                     <iframe
                         src="./src/bgm.html"
                         name="bgm_frame"
@@ -306,7 +306,7 @@
                         allow="autoplay; encrypted-media"
                         allowfullscreen
                     ></iframe>
-                </div>
+                </div> -->
                 <div id="speaker" class="" onclick="toggleBgm()"></div>
                 <div id="submit">
                     <img
