--- a/makeFlowerWreath/index.html
+++ b/makeFlowerWreath/index.html
@@ -8,6 +8,24 @@
             content="width=device-width, initial-scale=1.0, user-scalable=0;"
         />
         <title>원데이 클래스~꽃공예~</title>
+		<link rel="shortcut icon" href="./src/img/favi/favicon.ico"> <!--추가-->
+<link rel="apple-touch-icon" sizes="57x57" href="./src/img/favi/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="./src/img/favi/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="./src/img/favi/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="./src/img/favi/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="./src/img/favi/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="./src/img/favi/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="./src/img/favi/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="./src/img/favi/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./src/img/favi/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="./src/img/favi/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./src/img/favi/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="./src/img/favi/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./src/img/favi/favicon-16x16.png">
+<link rel="manifest" href="./src/img/favi/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="./src/img/favi/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
         <link
             rel="stylesheet"
             href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css"
